--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
   --header-height: 4rem;
   /* Colors */
   --body-color: #f2efe5;
+  --body-color-alt: #f9f9f9;
   --main-color: #436850;
   --main-color-alt: #12372a;
   --text-color: #191717;
@@ -39,12 +40,14 @@
 body {
   font-family: var(--main-family);
   font-size: var(--normal-size);
+  font-weight: var(--normal-weight);
   color: var(--text-color);
   background-color: var(--body-color);
   transition: 0.3s;
 }
 body.dark-theme {
   --body-color: #1d2521;
+  --body-color-alt: #333936;
   --main-color: #bfd8af;
   --main-color-alt: #99bc85;
   --text-color: #ffffff;
@@ -61,9 +64,17 @@ a,
 li {
   text-decoration: none;
 }
+button {
+  font-family: var(--main-family);
+  border: none;
+}
 
 /* --- Start Header --- */
 header.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: var(--header-height);
   display: flex;
   align-items: center;
@@ -77,12 +88,12 @@ header.header {
   }
   > div {
     position: fixed;
-    right: -3px;
+    left: -3px;
     width: 40px;
     height: 40px;
     background-color: var(--main-color-alt);
     top: calc(var(--header-height) + 0.5rem);
-    border-radius: 0.5rem 0 0 0.5rem;
+    border-radius: 0 0.5rem 0.5rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -93,3 +104,97 @@ header.header {
     }
   }
 }
+/* --- End Header --- */
+
+/* --- Start Main --- */
+/* --- Section Start Game --- */
+main.main {
+  margin-top: var(--header-height);
+  padding: 0.75rem 1.25rem;
+  section.start-section {
+    padding: 0.5rem 0.75rem;
+    background-color: var(--body-color-alt);
+    border-radius: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    h3 {
+      margin-bottom: 0.8rem;
+    }
+    .topic {
+      > div {
+        label {
+          margin-left: 0.5rem;
+          font-weight: var(--bold-weight);
+          font-size: var(--big-size);
+        }
+        span {
+          font-weight: var(--bold-weight);
+        }
+      }
+      > p {
+        i {
+          margin-left: 0.5rem;
+          font-size: var(--big-size);
+          color: var(--main-color-alt);
+        }
+        span {
+          font-weight: var(--bold-weight);
+          font-size: var(--big-size);
+        }
+      }
+    }
+    .diff {
+      > label {
+        font-weight: var(--bold-weight);
+        font-size: var(--big-size);
+      }
+      form#diff {
+        > div {
+          display: flex;
+          align-items: center;
+          input {
+            margin-bottom: -4px;
+            accent-color: var(--main-color-alt);
+            cursor: pointer;
+          }
+          label {
+            margin-right: 0.5rem;
+            font-weight: var(--bold-weight);
+          }
+        }
+        button {
+          display: block;
+          border: none;
+          padding: 0.4rem 1.75rem;
+          background-color: var(--main-color);
+          color: var(--text-color-alt);
+          font-size: var(--normal-size);
+          font-weight: var(--bold-weight);
+          border-radius: 0.75rem;
+          margin: 1rem auto 0;
+          cursor: pointer;
+          transition: 0.3s;
+          &:hover {
+            background-color: var(--main-color-alt);
+          }
+        }
+      }
+    }
+    &.info {
+      margin-top: 0.75rem;
+      p {
+        display: flex;
+        align-items: center;
+        span {
+          font-weight: var(--bold-weight);
+        }
+        i {
+          font-size: var(--big-size);
+          margin-left: 0.2rem;
+          margin-bottom: -3px;
+          color: var(--main-color-alt);
+        }
+      }
+    }
+  }
+}
+/* --- End Main --- */
