--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -278,6 +278,15 @@ main.main {
         }
       }
     }
+    .msg.active {
+      padding: 0.25rem 0.75rem 0.5rem;
+      background-color: var(--main-color);
+      color: var(--text-color-alt);
+      margin-top: 0.75rem;
+      border-radius: 0.5rem;
+      font-weight: var(--bold-weight);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
     .game-btns {
       button {
         padding: 0.5rem 1.25rem;
